gccida/c3/add_double
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_double/src/fold-const.c:738:43: error: expected expression
*hv = ( __PAIR128__( h2, l2) + *( _OWORD *)&l1) >> 64; 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_double/src/fold-const.c:738:35: error: use of undeclared identifier '_OWORD'
*hv = ( __PAIR128__( h2, l2) + *( _OWORD *)&l1) >> 64; 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_double/src/fold-const.c:739:69: error: expected expression
return ( ~( v6 ^ h2) & ( v6 ^ ( ( __PAIR128__( h2, l2) + *( _OWORD *)&l1) >> 64))) >> 63; 
                                                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_double/src/fold-const.c:739:61: error: use of undeclared identifier '_OWORD'
return ( ~( v6 ^ h2) & ( v6 ^ ( ( __PAIR128__( h2, l2) + *( _OWORD *)&l1) >> 64))) >> 63; 
                                                            ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/add_double/src/obj/fold-const.o] Error 1
